k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafkadedup
  labels:
    app.kubernetes.io/name: kafkadedup
